Voor elke speler wordt nu de datum van zijn eerste (MIN_PARTIJEN +1), laagste en hoogste ELO bijgehouden. Ook worden de hoogste en laagste ELO bijgehouden.
git-svn-id: http://intra.debooy.eu/svn/CaissaTools/trunk@249 b6724bcf-16b7-40a7-9fa5-013ba81ffa6e